--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
 			<a-entity position="4.64 0 -14.3" rotation="0 -90 0">
 				<a-entity rotation="0 72 0">
 					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
+					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".02 .02 .02" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="seedMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
-					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".01 .01 .01" position="0 0 0" visible='false'></a-entity>
 					<a-entity id='seed-sound-player' sound='src: #seed-sound; volume: 5' position= "0 0 0"></a-entity>
-                    <a-plane id="0" class="button" cursor-listener material="src: #voteHere" width="1" height="1" ></a-plane>
+                    <!-- <a-plane id="0" class="button" cursor-listener material="src: #voteHere" width="1" height="1" ></a-plane> -->
 				</a-entity>
 			</a-entity>
 
@@ -233,7 +233,7 @@
 			<a-entity position="-12.1663 0 -8.83185" rotation="0 -90 0">
 				<a-entity rotation="0 144 0">
 					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".035 .035 .035" position="0 0 0" visible='false'></a-entity>
+					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".02 .02 .02" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="treeMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
@@ -247,13 +247,13 @@
 			<a-entity position="-12.1592 0 8.84162" rotation="0 -90 0">
 				<a-entity rotation="0 216 0">
 					<a-entity id="nasalnanobotsTitleCSS" css-object="div: #nasalnanobotsTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".035 .035 .035" position="0 0 0" visible='false'></a-entity>
+					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".02 .02 .02" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="nasalMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="nasal" src="#nasalnanobots-obj" mtl="#nasalnanobots-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='nasal-sound-player' sound='src: #nasal-sound; volume: 5' position= "0 0 0"></a-entity>
-                    <a-plane id="2" class="button" cursor-listener material="src: #voteHere" width="1" height="1"></a-plane>
+                    <!-- <a-plane id="2" class="button" cursor-listener material="src: #voteHere" width="1" height="1"></a-plane> -->
 				</a-entity>
 			</a-entity>
 
@@ -261,13 +261,13 @@
 			<a-entity position="4.64 0 14.3" rotation="0 -90 0">
 				<a-entity rotation="0 288 0">
 					<a-entity id="sprayTitleCSS" css-object="div: #sprayTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".035 .035 .035" position="0 0 0" visible='false'></a-entity>
+					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".02 .02 .02" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="sprayMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="spray" src="#spray-obj" mtl="#spray-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='spray-sound-player' sound='src: #spray-sound; volume: 5' position= "0 0 0"></a-entity>
-                    <a-plane id="3" class="button" cursor-listener material="src: #voteHere" width="1" height="1"></a-plane>
+                    <!-- <a-plane id="3" class="button" cursor-listener material="src: #voteHere" width="1" height="1"></a-plane> -->
 				</a-entity>
 			</a-entity>
 
