--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
 			<a-entity position="4.64 0 -14.3" rotation="0 -90 0">
 				<a-entity rotation="0 72 0">
 					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
-					<a-box id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".02 .02 .02" position="-5 0 0" visible='false'></a-box>
+					<a-box id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-box>
 					<a-box opacity=".2" id="seedMouseBox" cursor-listener class="blurb-view-closer"
-					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
-					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					color='#BB00FF' height="7.5" width="15" depth="0" position="0 0 0"></a-box>
+					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0" position="-5 0 0"></a-obj-model>
+					<a-sphere opacity="0" class="blurb-view-opener" position="-5 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='seed-sound-player' sound='src: #seed-sound; volume: 5' position= "0 -2 0"></a-entity>
                      <a-box id="0" class="button" cursor-listener material="src: #voteHere" width="1" height="1" ></a-box> 
 				</a-entity>
