--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					if(this.className == "blurb-view-opener"){
 						this.setAttribute('visible', 'false'); //sphere
 						var artifact = this.parentNode.childNodes[7]; //object
-						artifact.setAttribute('position', '0 0 10');
+						artifact.setAttribute('position', '-5 0 10');
 						this.parentNode.childNodes[1].setAttribute('visible', false); //title
 						this.parentNode.childNodes[3].setAttribute('visible', true); //blurb
 						this.parentNode.childNodes[5].setAttribute('position', '0 0 5'); //pink thing
@@ -226,11 +226,11 @@
 					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
 					<a-box id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-box>
 					<a-box opacity=".2" id="seedMouseBox" cursor-listener class="blurb-view-closer"
-					color='#BB00FF' height="7.5" width="15" depth="0" position="0 0 0"></a-box>
-					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0" position="-5 0 0"></a-obj-model>
-					<a-sphere opacity="0" class="blurb-view-opener" position="-5 0 0" radius="2" color="#FFFAFA"></a-sphere>
-					<a-entity id='seed-sound-player' sound='src: #seed-sound; volume: 5' position= "0 -2 0"></a-entity>
-                     <a-box id="0" class="button" cursor-listener material="src: #voteHere" width="1" height="1" ></a-box> 
+					color='#BB00FF' height="7.5" width="15" depth="0"></a-box>
+					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-entity id='seed-sound-player' sound='src: #seed-sound; volume: 5'></a-entity>
+                     <a-box id="0" class="button" cursor-listener material="src: #voteHere" width="1" height="1" position="0 -5 0"></a-box> 
 				</a-entity>
 			</a-entity>
 
@@ -240,7 +240,7 @@
 					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
 					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".02 .02 .02" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="treeMouseBox" cursor-listener class="blurb-view-closer"
-					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
+					color='#BB00FF' height="7.5" width="15" depth="0"></a-box>
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='tree-sound-player' sound='src: #tree-sound; volume: 5' position= "0 0 0"></a-entity>
