--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='seed-sound-player' sound='src: #seed-sound; volume: 5'></a-entity>
-                     <a-box id="0" class="button" cursor-listener material="src: #voteHere" width="2" height="2" position="0 -3 0"></a-box> 
+                     <a-box id="0" class="button" cursor-listener material="src: #voteHere" width="2" height="2" depth="0" position="0 -3 0"></a-box> 
 				</a-entity>
 			</a-entity>
 
