--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						artifact.setAttribute('position', '-2 0 8');
 						this.parentNode.childNodes[1].setAttribute('visible', false); //title
 						this.parentNode.childNodes[3].setAttribute('visible', true); //blurb
-						this.parentNode.childNodes[5].setAttribute('position', '-2 0 10'); //pink thing
+						this.parentNode.childNodes[5].setAttribute('position', '0 0 10'); //pink thing
 						if(activeSP){
 							activeSP.components.sound.stopSound();
 						}
@@ -230,49 +230,49 @@
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='seed-sound-player' sound='src: #seed-sound; volume: 5'></a-entity>
-                     <a-box id="0" class="button" cursor-listener material="src: #voteHere" width="2" height="2" depth="0" position="0 -4 0"></a-box> 
+                     <a-box id="0" class="button" cursor-listener material="src: #voteHere" width="2.5" height="2" depth="0" position="0 -4 0"></a-box> 
 				</a-entity>
 			</a-entity>
 
 			<!-- tree artifact -->
 			<a-entity position="-12.1663 0 -8.83185" rotation="0 -90 0">
 				<a-entity rotation="0 144 0">
-					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".02 .02 .02" position="0 0 0" visible='false'></a-entity>
+					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
+					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="treeMouseBox" cursor-listener class="blurb-view-closer"
-					color='#BB00FF' height="7.5" width="15" depth="0"></a-box>
+					color='#BB00FF' height="2" width="4" depth="0"></a-box>
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
-					<a-entity id='tree-sound-player' sound='src: #tree-sound; volume: 5' position= "0 0 0"></a-entity>
-                    <a-box id="1" class="button" cursor-listener material="src: #voteHere" width="1" height="1"></a-box>
+					<a-entity id='tree-sound-player' sound='src: #tree-sound; volume: 5'></a-entity>
+                    <a-box id="1" class="button" cursor-listener material="src: #voteHere" width="2.5" height="2" depth="0"></a-box>
 				</a-entity>
 			</a-entity>
 
 			<!-- inhalable computer artifact -->
 			<a-entity position="-12.1592 0 8.84162" rotation="0 -90 0">
 				<a-entity rotation="0 216 0">
-					<a-entity id="nasalnanobotsTitleCSS" css-object="div: #nasalnanobotsTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".02 .02 .02" position="0 0 0" visible='false'></a-entity>
+					<a-entity id="nasalnanobotsTitleCSS" css-object="div: #nasalnanobotsTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
+					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="nasalMouseBox" cursor-listener class="blurb-view-closer"
-					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
+					color='#BB00FF' position="0 0 0" height="2" width="4" depth="0"></a-box>
 					<a-obj-model id="nasal" src="#nasalnanobots-obj" mtl="#nasalnanobots-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='nasal-sound-player' sound='src: #nasal-sound; volume: 5' position= "0 0 0"></a-entity>
-                     <a-box id="2" class="button" cursor-listener material="src: #voteHere" width="1" height="1"></a-box> 
+                     <a-box id="2" class="button" cursor-listener material="src: #voteHere" width="2.5" height="2" depth="0"></a-box> 
 				</a-entity>
 			</a-entity>
 
 			<!-- spray artifact -->
 			<a-entity position="4.64 0 14.3" rotation="0 -90 0">
 				<a-entity rotation="0 288 0">
-					<a-entity id="sprayTitleCSS" css-object="div: #sprayTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".02 .02 .02" position="0 0 0" visible='false'></a-entity>
+					<a-entity id="sprayTitleCSS" css-object="div: #sprayTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
+					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="sprayMouseBox" cursor-listener class="blurb-view-closer"
-					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
+					color='#BB00FF' position="0 0 0" height="2" width="4" depth="0"></a-box>
 					<a-obj-model id="spray" src="#spray-obj" mtl="#spray-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='spray-sound-player' sound='src: #spray-sound; volume: 5' position= "0 0 0"></a-entity>
-                     <a-box id="3" class="button" cursor-listener material="src: #voteHere" width="1" height="1"></a-box> 
+                     <a-box id="3" class="button" cursor-listener material="src: #voteHere" width=".25" height="2" depth="0"></a-box> 
 				</a-entity>
 			</a-entity>
 
