Blurbs and Buttons Done (maybe)

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='tree-sound-player' sound='src: #tree-sound; volume: 5'></a-entity>
-                    <a-box id="1" class="button" cursor-listener material="src: #voteHere" width="2.5" height="2" depth="0"></a-box>
+                    <a-box id="1" class="button" cursor-listener material="src: #voteHere" width="2.5" height="2" depth="0" position="0 -4 0"></a-box>
 				</a-entity>
 			</a-entity>
 
@@ -258,7 +258,7 @@
 					<a-obj-model id="nasal" src="#nasalnanobots-obj" mtl="#nasalnanobots-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='nasal-sound-player' sound='src: #nasal-sound; volume: 5' position= "0 0 0"></a-entity>
-                     <a-box id="2" class="button" cursor-listener material="src: #voteHere" width="2.5" height="2" depth="0"></a-box> 
+                     <a-box id="2" class="button" cursor-listener material="src: #voteHere" width="2.5" height="2" depth="0" position="0 -4 0"></a-box> 
 				</a-entity>
 			</a-entity>
 
@@ -272,7 +272,7 @@
 					<a-obj-model id="spray" src="#spray-obj" mtl="#spray-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='spray-sound-player' sound='src: #spray-sound; volume: 5' position= "0 0 0"></a-entity>
-                     <a-box id="3" class="button" cursor-listener material="src: #voteHere" width=".25" height="2" depth="0"></a-box> 
+                     <a-box id="3" class="button" cursor-listener material="src: #voteHere" width="2.5" height="2" depth="0" position="0 -4 0"></a-box> 
 				</a-entity>
 			</a-entity>
 
