--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <style type="text/css">
 	.textbox {
 
-		    width: 275px;
+		    /*width: 275px;*/
 		    border: solid 1px #ccc;
-		    height: 26px;
+		    /*height: 26px;*/
 		    background: #5E768D;
 		    background: -moz-linear-gradient(top, #546A7F 0%, #5E768D 20%);
 		    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#546A7F), color-stop(20%,#5E768D));
@@ -36,7 +36,8 @@
 		    font-family: sans-serif;
 		    /*font-size: 16px;*/
 		    color: #F2F2F2;
-		    text-transform: uppercase;
+		    /*text-transform: uppercase;*/
+		    text-align: center;
 		    text-shadow: 0px -1px 0px #334F71;
 		} 
 </style>
