--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		    /*width: 275px;*/
 		    border: solid 1px #ccc;
-		    /*height: 26px;*/
+		    height: 26px;
 		    background: #5E768D;
 		    background: -moz-linear-gradient(top, #546A7F 0%, #5E768D 20%);
 		    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#546A7F), color-stop(20%,#5E768D));
