--- a/index.html
+++ b/index.html
@@ -130,25 +130,25 @@
 
 	<!-- Seed Card -->
 	<div hidden>
-		<div id="seedTitle" visible="true" class="textbox">Programmable Seeds<br><br><br><br></div>
+		<div id="seedTitle" visible="true" class="textbox">  Programmable Seeds  <br><br><br><br></div>
 		<img src="resources/images/SeedPod.jpg" id="seedBlurb" visible="false" style="width:400px;height:320px;">
 	</div>
 
 	<!-- Carbon Tree Card -->
 	<div hidden>
-		<div id="treeTitle" visible="true" class="textbox">Carbon Tree<br><br><br><br></div>
+		<div id="treeTitle" visible="true" class="textbox">  Carbon Trees  <br><br><br><br></div>
 		<img src="resources/images/CarbonTree.jpg" id="treeBlurb" visible="false" style="width:400;height:320px;">
 	</div>
 
 	<!-- Nasal Nanobot Card -->
 	<div hidden>
-		<div id="nasalnanobotsTitle" visible="true" class="textbox">Nasal Nanobots<br><br><br><br></div>
+		<div id="nasalnanobotsTitle" visible="true" class="textbox">  Nasal Nanobots  <br><br><br><br></div>
 		<img src="resources/images/NasalNanobots.jpg" id="nasalnanobotsBlurb" visible="false" style="width:400px;height:320px;">
 	</div>
 
 	<!-- Spray Card -->
 	<div hidden>
-		<div id="sprayTitle" visible="true" class="textbox">Paintable Computers<br><br><br><br></div>
+		<div id="sprayTitle" visible="true" class="textbox">  Paintable Computers  <br><br><br><br></div>
 		<img src="resources/images/Spray.jpg" id="sprayBlurb" visible="false" style="width:400px;height:320px;">
 	</div>
 
@@ -247,7 +247,7 @@
 			<!-- Seed Artifact -->
 			<a-entity position="4.64 0 -14.3" rotation="0 -90 0">
 				<a-entity rotation="0 72 0">
-					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
+					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.08 0.08 0.08" position="0 3 0"></a-entity>  
 					<a-box id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-box>
 					<a-box opacity=".2" id="seedMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' height="2" width="4" depth="0" position="0 0 0"></a-box>
@@ -261,7 +261,7 @@
 			<!-- tree artifact -->
 			<a-entity position="-12.1663 0 -8.83185" rotation="0 -90 0">
 				<a-entity rotation="0 144 0">
-					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
+					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.08 0.08 0.08" position="0 3 0"></a-entity>  
 					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="treeMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' height="2" width="4" depth="0"></a-box>
@@ -275,7 +275,7 @@
 			<!-- inhalable computer artifact -->
 			<a-entity position="-12.1592 0 8.84162" rotation="0 -90 0">
 				<a-entity rotation="0 216 0">
-					<a-entity id="nasalnanobotsTitleCSS" css-object="div: #nasalnanobotsTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
+					<a-entity id="nasalnanobotsTitleCSS" css-object="div: #nasalnanobotsTitle" scale="0.08 0.08 0.08" position="0 3 0"></a-entity>  
 					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="nasalMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="2" width="4" depth="0"></a-box>
@@ -289,7 +289,7 @@
 			<!-- spray artifact -->
 			<a-entity position="4.64 0 14.3" rotation="0 -90 0">
 				<a-entity rotation="0 288 0">
-					<a-entity id="sprayTitleCSS" css-object="div: #sprayTitle" scale="0.08 0.08 0.08" position="0 0 0"></a-entity>  
+					<a-entity id="sprayTitleCSS" css-object="div: #sprayTitle" scale="0.08 0.08 0.08" position="0 3 0"></a-entity>  
 					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".02 .02 .02" position="5 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="sprayMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="2" width="4" depth="0"></a-box>
