--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 		<a-sphere position="0 0 5" radius=".03" color="#0000ff"></a-sphere> -->
 
 			<!-- Seed Artifact -->
-			<a-entity position="4.64 0 -14.3" rotation="0 -90 0">
+			<a-entity position="4.64 0 -14.3" rotation="0 -90 0" opacity="0">
 				<a-entity rotation="0 72 0">
 					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.08 0.08 0.08" position="0 4 0"></a-entity>  
 					<a-box id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".02 .02 .02" position="5 1 0" visible='false'></a-box>
@@ -259,7 +259,7 @@
 			</a-entity>
 
 			<!-- tree artifact -->
-			<a-entity position="-12.1663 0 -8.83185" rotation="0 -90 0">
+			<a-entity position="-12.1663 0 -8.83185" rotation="0 -90 0" opacity="0">
 				<a-entity rotation="0 144 0">
 					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.08 0.08 0.08" position="0 4 0"></a-entity>  
 					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".02 .02 .02" position="5 1 0" visible='false'></a-entity>
@@ -273,7 +273,7 @@
 			</a-entity>
 
 			<!-- inhalable computer artifact -->
-			<a-entity position="-12.1592 0 8.84162" rotation="0 -90 0">
+			<a-entity position="-12.1592 0 8.84162" rotation="0 -90 0" opacity="0">
 				<a-entity rotation="0 216 0">
 					<a-entity id="nasalnanobotsTitleCSS" css-object="div: #nasalnanobotsTitle" scale="0.08 0.08 0.08" position="0 4 0"></a-entity>  
 					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".02 .02 .02" position="5 1 0" visible='false'></a-entity>
@@ -287,7 +287,7 @@
 			</a-entity>
 
 			<!-- spray artifact -->
-			<a-entity position="4.64 0 14.3" rotation="0 -90 0">
+			<a-entity position="4.64 0 14.3" rotation="0 -90 0" opacity="0">
 				<a-entity rotation="0 288 0">
 					<a-entity id="sprayTitleCSS" css-object="div: #sprayTitle" scale="0.08 0.08 0.08" position="0 4 0"></a-entity>  
 					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".02 .02 .02" position="5 1 0" visible='false'></a-entity>
